--- a/.config/hypr/configs/submap.conf
+++ b/.config/hypr/configs/submap.conf
@@ -1,4 +1,4 @@
-$reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
+$reset = hyprctl dispatch submap reset
 $dpatch = hyprctl dispatch
 #actions
 bind=$mainMod,a,submap,action
@@ -34,7 +34,8 @@ bind=$mainMod,a,submap,action
 #exec
 bind=$mainMod,e,submap,exec
   submap=exec
-    bind=,r,exec,$reset $runner
+    bind=,r,exec,$runner
+    bind=,r,submap, reset
     bind=,e,exec,$reset emacsclient -c -a 'emacs'
     bind=,t,exec,$reset stretch.sh -t 15 -s 12 -w 3
     bind=,m,exec,$reset maps.sh
@@ -67,29 +68,50 @@ bind=$mainMod,L,submap,layout
     bind=,escape,submap,reset
   submap=reset
 
+# Submap to switch workspaces
 bind=$mainMod,w,submap,workspace
-  submap=workspace
-    bind=,b,exec,$reset $dpatch workspace 1
-    bind=,t,exec,$reset $dpatch workspace 2
-    bind=,v,exec,$reset $dpatch workspace 3
-    bind=,l,exec,$reset $dpatch workspace 4
-    bind=,m,exec,$reset $dpatch workspace 5
-    bind=,s,exec,$reset $dpatch workspace 6
-    bind=,g,exec,$reset $dpatch workspace 7
-    bind=,escape,submap,reset
-  submap=reset
+    submap=workspace
+        bind=,t,exec, hyprsome, 1
+        bind=,t, submap, reset
+        bind=,i, exec, hyprsome, 2 
+        bind=,i, submap, reset
+        bind=,r, workspace, 3
+        bind=,r, submap, reset
+
+        bind=,b, workspace, 4
+        bind=,b, submap, reset
+        bind=,v, workspace, 5
+        bind=,v, submap, reset
+        bind=,s, workspace, 6
+        bind=,s, submap, reset
+        bind=,l, workspace, 7
+        bind=,l, submap, reset
+        bind=,g, workspace, g
+        bind=,g, submap, reset
+        bind=,escape, submap, reset
+    submap=reset
 
 bind=$sS,w,submap,movetoworkspace
-  submap=movetoworkspace
-    bind=,b,exec,$reset $dpatch movetoworkspace 1
-    bind=,t,exec,$reset $dpatch movetoworkspace 2
-    bind=,v,exec,$reset $dpatch movetoworkspace 3
-    bind=,l,exec,$reset $dpatch movetoworkspace 4
-    bind=,m,exec,$reset $dpatch movetoworkspace 5
-    bind=,s,exec,$reset $dpatch movetoworkspace 6
-    bind=,g,exec,$reset $dpatch movetoworkspace 7
-    bind=,escape,submap,reset
-  submap=reset
+    submap=movetoworkspace
+        bind=,t,movetoworkspace, 1
+        bind=,t, submap, reset
+        bind=,i,movetoworkspace, 2
+        bind=,i, submap, reset
+        bind=,r,movetoworkspace, 3
+        bind=,r, submap, reset
+
+        bind=,b,movetoworkspace, 4
+        bind=,b, submap, reset
+        bind=,v,movetoworkspace, 5
+        bind=,v, submap, reset
+        bind=,s,movetoworkspace, 6
+        bind=,s, submap, reset
+        bind=,l,movetoworkspace, 7
+        bind=,l, submap, reset
+        bind=,g,movetoworkspace, 8
+        bind=,g, submap, reset
+        bind=,escape,submap,reset
+    submap=reset
 
 bind=$mainMod,p,submap,pymor
   submap=pymor
