--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -9,6 +9,12 @@ listener {
     on-resume = hyprctl dispatch dpms on    
 }
 
+listener {
+        timeout = 2
+        on-timeout = touch /tmp/current_idle
+        on-resume = rm /tmp/current_idle
+    }
+
 #listener {
 #    timeout = 1800                      
 #    on-timeout = systemctl suspend
