--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,8 +1,17 @@
 #bind = $mainMod, T, exec, $terminal -T tmux -e tmux
 bind = $mainMod, T, exec, $terminal -T zellij -e zellij
+bind = $mainMod, D, dmenu_run
+bind = $sS, T, exec, kitty
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
+bind = $mainMod, i, exec, hyprctl keyword plugin:hy3:tabs:height 20
+bind = $mainMod, i, exec, hyprctl keyword plugin:hy3:tabs:render_text true
+bind = $mainMod, o, exec, hyprctl keyword plugin:hy3:tabs:height 20
+bind = $mainMod, o, exec, hyprctl keyword plugin:hy3:tabs:render_text true
+
+bindr = $mainMod, o, exec, hyprctl keyword plugin:hy3:tabs:height 2
+bindr = $mainMod, o, exec, hyprctl keyword plugin:hy3:tabs:render_text false
 
 bind = $mainMod, j, layoutmsg,cyclenext
 bind = $mainMod, k, layoutmsg,cycleprev
@@ -14,7 +23,7 @@ bind = $mainMod, H, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, K,changegroupactive, b
 bind = $mainMod, J,changegroupactive, f
 bind = $mainMod, D,moveoutofgroup
-bind = $mainMod ,i,resizeactive,0 -80
+#bind = $mainMod ,i,resizeactive,0 -80
 #bind = $mainMod ,d,resizeactive,0 80
 
 bind = $sS, F, layoutmsg,focusmaster
