--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -1,3 +1,14 @@
+# vertical monitor
+workspace = 1, monitor: VGA-1, default:true
+workspace = 2, monitor: VGA-1
+workspace = 3, monitor: VGA-1
+
+# horizontal monitor
+workspace = 4, monitor: HDMI-A-1, default:true
+workspace = 5, monitor: HDMI-A-1
+workspace = 6, monitor: HDMI-A-1
+workspace = 7, monitor: HDMI-A-1
+workspace = 8, monitor: HDMI-A-1
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:(Tk)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
@@ -33,42 +44,38 @@ windowrulev2 = float,class:^(whatsapp-for-linux)$,title:^(WhatsApp for Linux)$
 windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
-windowrulev2 = move 100 100,title:^(calculator)$
 windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
 
 # default to wks
 # browsewks
-windowrulev2 = workspace 1 silent,class:^(firefox)$,
-windowrulev2 = workspace 1 silent,class:^(Brave-browser)$,
-windowrulev2 = workspace 1,class:^(floorp)$,
-windowrulev2 = workspace 1 silent,class:^(org.mozilla.firefox)$,
-windowrulev2 = workspace 1,class:^(org.qutebrowser.qutebrowser)$
-# terminalwks
-windowrulev2 = workspace 2 silent,class:^(Alacritty)$
-windowrulev2 = workspace 2 silent,class:^(kitty)$
-# videowks
-windowrulev2 = workspace 3,class:^(mpv)$
-windowrulev2 = workspace 3,title:^(Media viewer)$
-# studywks
+windowrulev2 = workspace 2 silent,class:^(firefox)$,
+windowrulev2 = workspace 2,class:^(floorp)$,
+windowrulev2 = workspace 2 silent,class:^(org.mozilla.firefox)$,
+windowrulev2 = workspace 2,class:^(org.qutebrowser.qutebrowser)$
+## terminalwks
+windowrulev2 = workspace 1 silent,class:^(Alacritty)$
+windowrulev2 = workspace 1 silent,class:^(kitty)$
+## videowks
+windowrulev2 = workspace 5,class:^(mpv)$
+windowrulev2 = workspace 5,title:^(Media viewer)$
+## studywks
 windowrulev2 = workspace 6,class:^(org.telegram.desktop)$,title:^(Telegram)$
-windowrulev2 = workspace 6,class:^(org.pwmt.zathura)$
+windowrulev2 = workspace 3,class:^(org.pwmt.zathura)$
 windowrulev2 = workspace 6,class:^(anki)$
 windowrulev2 = workspace 6,class:^(DL: language lessons)$
 windowrulev2 = workspace 6,class:^(anki.desktop)$
 windowrulev2 = workspace 6,class:^(User 1 - Anki)$
-# gamewks
-windowrulev2 = workspace 4 silent,title:^(Steam)$
-windowrulev2 = workspace 4 silent,class:^(org.libretro.RetroArch)$
-windowrulev2 = workspace 4 silent,class:^(pcsx2-qt)$
-windowrulev2 = workspace 4 silent,class:^(zenity)$,title:^(Steam Setup)$
-windowrulev2 = workspace 4 silent,class:^(org.freedesktop.Xwayland)$
-windowrulev2 = workspace 4 silent,class:^(steam)$,title:^(Steam)$
-windowrulev2 = workspace 4 silent,class:^(heroic)$
-windowrulev2 = workspace 4 silent,class:^(steam)$
-windowrulev2 = workspace 4 silent,class:^(xbox-joy)$
-windowrulev2 = workspace 4 silent,class:^(lutris)$
-# class
-windowrulev2 = workspace 5 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
+## gamewks
+windowrulev2 = workspace 7 silent,title:^(Steam)$
+windowrulev2 = workspace 7 silent,class:^(org.libretro.RetroArch)$
+windowrulev2 = workspace 7 silent,class:^(pcsx2-qt)$
+windowrulev2 = workspace 7 silent,class:^(zenity)$,title:^(Steam Setup)$
+windowrulev2 = workspace 7 silent,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = workspace 7 silent,class:^(steam)$,title:^(Steam)$
+windowrulev2 = workspace 7 silent,class:^(heroic)$
+windowrulev2 = workspace 7 silent,class:^(steam)$
+windowrulev2 = workspace 7 silent,class:^(xbox-joy)$
+windowrulev2 = workspace 7 silent,class:^(lutris)$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
@@ -84,15 +91,18 @@ windowrulev2 = opacity 1.0 override,class:^(heroic)$
 windowrulev2 = immediate, class:^(tf_linux)$
 windowrulev2 = immediate, class:^(org.vinegarhq.Sober)$
 
+
+
+
+
 # resize
 windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
 
 # steam
-windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
+#windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
 windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 
 # tab layout rules
-#
 windowrulev2 = group set always,class:^(.*)$
 windowrulev2 = workspace 6 silent,class:^(net.ankiweb.Anki)$,title:^(User 1 - Anki)$
 windowrulev2 = workspace 6 silent,class:^(com.github.xournalpp.xournalpp)$
