--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,7 @@
-monitor=,preferred,auto,auto
+monitor=VGA-1,1360x768,0x0,1, transform, 1
+monitor=HDMI-A-1,1280x1024, 768x0, 1
+workspace=VGA-1
+
 source = ~/.config/hypr/configs/env.conf
 source = ~/.config/hypr/configs/exec.conf
 source = ~/.config/hypr/configs/variables.conf
@@ -10,4 +13,3 @@ source = ~/.config/hypr/configs/scratchpads.conf
 source = ~/.config/hypr/configs/rules.conf
 source = ~/.config/hypr/configs/games-rules.conf
 source = ~/.config/hypr/configs/tabbed.conf
-
