--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,7 +2,7 @@
 exec ~/.config/sway/autostart
 # Own variables
 set $fg #eceff4
-set $warning #EABF61
+set $warning #bf616a
 set $bg #2e3440
 set $bg1 #4c566a
 set $mod Mod4
@@ -310,9 +310,9 @@ for_window [app_id="imv"] floating enable, resize set 700
 # tab related
 workspace_layout tabbed
 #                       border background text indicator floating border
-client.focused          $warning $bg      $fg  $warning  $warning
-client.focused_inactive $bg      $bg      $bg1 $warning  $bg1
-client.unfocused        $bg      $bg      $bg1 $warning  $bg1
+client.focused          $bg1     $bg      $warning  $warning  $warning
+client.focused_inactive $bg1      $bg      $fg $warning  $bg1
+client.unfocused        $bg      $bg      $fg $warning  $bg1
 
 # hide mouse
 seat seat0 hide_cursor 3000
