--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,19 +20,17 @@ set $menu bemenu-run -i -H 26
 workspace 1 output HDMI-A-1
 workspace 2 output HDMI-A-1
 workspace 3 output HDMI-A-1
-workspace 4 output HDMI-A-1
+workspace 4 output VGA-1
 workspace 5 output VGA-1
 workspace 6 output VGA-1
-workspace 7 output VGA-1
-workspace 8 output VGA-1
 
 # Sway variables
 default_border pixel
 hide_edge_borders --i3 smart
 
 # Monitor
-output HDMI-A-1 res 1280x1024@75HZ pos 0 0 transform 270 bg ~/.wallpapers/ign_unsplash32_vertical.png fill allow_tearing yes max_render_time off
-output VGA-1 res 1360x768@60HZ pos 1024 500 bg ~/.wallpapers/ign_unsplash32_horizontal.png fill allow_tearing yes max_render_time off
+output HDMI-A-1 res 1280x1024@75HZ pos 0 0 transform 270 bg ~/.wallpapers/vert.png fill allow_tearing yes max_render_time off
+output VGA-1 res 1360x768@60HZ pos 1024 500 bg ~/.wallpapers/hori.png fill allow_tearing yes max_render_time off
 # Read `man 5 sway-input` for more information about this section.
 input type:pointer {
     accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
@@ -135,15 +133,13 @@ mode "resize" {
 }
 mode "workspaces" {
     # vertical monitor
-    bindsym t workspace 1, mode "default"
-    bindsym w workspace 2, mode "default"
-    bindsym r workspace 3, mode "default"
-    bindsym a workspace 4, mode "default"
+    bindsym w workspace 1, mode "default"
+    bindsym t workspace 2, mode "default"
+    bindsym a workspace 3, mode "default"
     # horizontal monitor
-    bindsym b workspace 5, mode "default"
-    bindsym g workspace 6, mode "default"
-    bindsym s workspace 7, mode "default"
-    bindsym d workspace 8, mode "default"
+    bindsym b workspace 4, mode "default"
+    bindsym g workspace 5, mode "default"
+    bindsym d workspace 6, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -151,15 +147,13 @@ mode "workspaces" {
 ## Move workspace binds
 mode "move_workspaces" {
     # vertical monitor
-    bindsym t move container to workspace number 1, mode "default"
-    bindsym w move container to workspace number 2, mode "default"
-    bindsym r move container to workspace number 3, mode "default"
-    bindsym a move container to workspace number 4, mode "default"
+    bindsym w move container to workspace number 1, mode "default"
+    bindsym t move container to workspace number 2, mode "default"
+    bindsym a move container to workspace number 3, mode "default"
     # horizontal monitor
-    bindsym b move container to workspace number 5, mode "default"
-    bindsym g move container to workspace number 6, mode "default"
-    bindsym s move container to workspace number 7, mode "default"
-    bindsym d move container to workspace number 8, mode "default"
+    bindsym b move container to workspace number 4, mode "default"
+    bindsym g move container to workspace number 5, mode "default"
+    bindsym d move container to workspace number 6, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -275,47 +269,24 @@ bar {
         swaybar_command "waybar"
 }
 
-# Rules
-for_window [class="^tf_linux64$"] move to workspace 8
-for_window [class="^hl_linux$"] move to workspace 8
-for_window [class="^steam_app_48700$"] move to workspace 8
-for_window [class="^mb_warband_linux$"] move to workspace 8
-for_window [class="^steam_app_425580$"] move to workspace 8
-for_window [class="^steam_app_475150$"] move to workspace 8
-for_window [class="^steam_app_35130$"] move to workspace 8
-for_window [class="^steam_app_257510$"] move to workspace 8
-for_window [class="^steam_app_8980$"] move to workspace 8
-for_window [class="^steam_app_0$"] move to workspace 8
-for_window [class="^steam_app_20900$"] move to workspace 8
-for_window [class="^Rising$"] move to workspace 8
-for_window [class="^pes2017.exe$"] move to workspace 8
-for_window [class="^org.vinegarhq.Sober$"] move to workspace 8
-for_window [class="^steam_app_8000$"] move to workspace 8
-for_window [app_id="^gamescope$"] move to workspace 8
-for_window [class="^hl2_linux$"] move to workspace 8
-for_window [class="^steam_app_218640$"] move to workspace 8
-for_window [class="^Firefox$"] inhibit_idle fullscreen
-for_window [app_id="^firefox$"] inhibit_idle fullscreen
-## launcher workspace rules
-for_window [app_id="^net.lutris.Lutris$"] move to workspace 6
-for_window [class="^steam$"] move to workspace 6
-for_window [class="^heroic$"] move to workspace 6
-for_window [app_id="^mpv$"] move to workspace 8
 #for_window [class="^com.github.th_ch.youtube_music$"] move to workspace 5
 ## sizes
 for_window [title="Open file"] resize set width 900, resize set height 500
 for_window [app_id="yad"] floating enable, resize set 100, move position 30 30
 for_window [app_id="imv"] floating enable, resize set 700
+for_window [app_id="com.example.App"] floating enable, resize set 700
+
 
 # tab related
 workspace_layout tabbed
 #                       border background text indicator floating border
-client.focused          $bg1     $bg      $warning  $warning  $warning
-client.focused_inactive $bg1      $bg      $fg $warning  $bg1
+client.focused          $bg      $bg      $warning  $bg  $warning
+client.focused_inactive $bg      $bg      $warning $warning  $bg1
 client.unfocused        $bg      $bg      $fg $warning  $bg1
 
 # hide mouse
 seat seat0 hide_cursor 3000
 
 include /etc/sway/config.d/*
+include ~/.config/sway/rules.conf
 
