--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,3 +1,3 @@
-image=VGA-1:/home/digo/.wallpapers/ign_unsplash21.png 
-image=HDMI-A-1:/home/digo/.wallpapers/ign_unsplash21.png
+image=VGA-1:/home/digo/.wallpapers/hori.png
+image=HDMI-A-1:/home/digo/.wallpapers/vert.png
 hide-keyboard-layout
